fix spacing on names under photos in about page

--- a/frontend/src/components/Pages/About/About.css
+++ b/frontend/src/components/Pages/About/About.css
@@ -56,6 +56,7 @@
     font-size: 20px;
     font-weight: bold;
     font-style: italic;
+    text-wrap: nowrap;
 }
 
 .individual-photo-li {
@@ -64,4 +65,5 @@
     padding:  10px 10%;
     height: 320px;
     width: 215px;
+    align-items: center;
 }
